--- a/src/less/bootstrap.less
+++ b/src/less/bootstrap.less
@@ -1,6 +1,8 @@
 @import "../../node_modules/bootstrap/less/bootstrap.less"; 
+@buttonBorderColor : #ccc;
+@buttonBackgroundColor : #f0f0f0;
 .recipeGridPreview{
-    border: 1px solid lightgray;
+    border: 1px solid @buttonBorderColor;
     border-collapse: collapse;
     padding: 0.5em;
     box-sizing: border-box;
@@ -16,8 +18,7 @@
     }
     transition: 500ms all linear;
     &:hover{
-        background-color: #f0f0f0;
-        border: 1px solid black;
+        background-color: @buttonBackgroundColor;
         transition: 100ms all linear;
     }
     
@@ -25,4 +26,50 @@
         height: 20em;    
     }
     height: 15em;
+}
+header{
+    height: 8em;
+    clear: both;
+    box-sizing: border-box;
+    padding: 2em 0;
+    &>*{
+        margin: 0;
+        float:left;
+        width: 33%;
+        box-sizing: border-box;
+    }
+    nav>a{
+            border: 1px solid @buttonBorderColor;
+            padding: .5em;
+            color: #333;
+            background-color: #fff;
+            text-align: center;
+            text-decoration: none;
+            transition: 200ms all linear;
+            &:focus{
+                text-decoration: none;
+            }
+
+            &:active, &:hover{
+                color: #333;
+                background-color: @buttonBackgroundColor;
+                border-color: #adadad;
+                text-decoration: none;
+                transition: 100ms all linear;
+            }
+            .active{
+                text-decoration: none;
+                color: #333;
+                background-color: @buttonBackgroundColor;
+                border-color: #adadad;
+                &:focus, &:hover{
+                    text-decoration: none;
+                    color: #333;
+                    background-color: #d4d4d4;
+                    border-color: #8c8c8c;
+                }
+            }
+        
+    }
+    
 }
