--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -5,3 +5,13 @@
         width: 80%;
     }
 }
+.tag{
+    margin: .2em 0;
+    padding: .2em;
+    line-height: 2.3em;
+    transition: background-color .5s linear;
+    &:hover{
+        transition: background-color .1s linear;
+        background-color: #efefef;
+    }
+}
