--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -10,8 +10,30 @@
     padding: .2em;
     line-height: 2.3em;
     transition: background-color .5s linear;
+    cursor: text;
+    & .btn{
+        width: 2.3em;
+    }
+    & div:first-child{
+        width: calc(~'100% - 2.3em');
+    }
     &:hover{
         transition: background-color .1s linear;
         background-color: #efefef;
+        &>div{
+            background-color: blue;
+            &:first-child:after{
+                content: "✎";
+                transform: scaleX(-1);
+                padding: 0 1em;
+                display: inline-block;
+            }
+        }
     }
+}
+.left{
+    float: left;
+}
+.right{
+    float: right;
 }
