tags finished (with add tag modificatoin)

--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -11,6 +11,7 @@
 }
 .editableDeletable{ 
     & .text{
+        min-height: 2.5em;
         padding: 0 .9em;
         overflow: auto;
         border : 1px solid transparent;
